# pooch-figshare

./: .gitignore  .gitlab-ci.yml  CITATION.cff  COPYING.md  FILESTRUCTURE.md  FigshareRepository.py  LICENSE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
doc/: api.rst  conf.py  index.rst
notebooks/: demo.ipynb
pooch_figshare/: __init__.py  pooch_figshare.py  repository.py
tests/: conftest.py  test_pooch_figshare.py
tests/data/: figshare_record.py
tests/unit/: test_repository.py
